<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFirstX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_equation_x"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_x"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/etFirstY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_equation_y"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_y"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/etFirstZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_equation_z"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equation_zero"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSecondX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/second_equation_x"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_x"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/etSecondY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/second_equation_y"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_y"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/etSecondZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/second_equation_z"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equation_zero"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_error"
        android:text="@string/calculate_button" />

    <TextView
        android:id="@+id/tv_show_x_and_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_show_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_error"
        android:text="@string/show_graph_button" />

</LinearLayout>